--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Test
 
 on:
   push:
@@ -21,8 +21,8 @@ jobs:
     - name: Dependencies
       run: go get
 
-    - name: Build
-      run: go build -v ./...
+#    - name: Build
+#      run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
